src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>BRI_Depression_Subscale__c</fullName>
        <formula>CASE( BRI_HFPI_Q12__c, 
&quot;(NR) No Response(no score)&quot;, 0, &quot;(5)– Rarely or Never&quot;, 5, &quot;(4)– A little of the time&quot;, 4, &quot;(3) – Some of the time&quot;, 3, &quot;(2) – Good part of the time&quot;,2, &quot;(1) – Always or most of the time&quot;,1,0) 
+ 
CASE( BRI_HFPI_Q13__c, 
&quot;(1)-Rarely or Never&quot;, 1, &quot;(2)-A little of the time&quot;, 2, &quot;(3)-Some of the time&quot;, 3, &quot;(4)-Good part of the time&quot;, 4, &quot;(5)-Always or most of the time&quot;,5,0) 
+ 
CASE( BRI_HFPI_Q14__c, 
&quot;(1)-Rarely or Never&quot;, 1, &quot;(2)-A little of the time&quot;, 2, &quot;(3)-Some of the time&quot;, 3, &quot;(4)-Good part of the time&quot;, 4, &quot;(5)-Always or most of the time&quot;,5,0) 
+ 
CASE( BRI_HFPI_Q15__c, 
&quot;(NR) No Response(no score)&quot;, 0, &quot;(5)– Rarely or Never&quot;, 5, &quot;(4)– A little of the time&quot;, 4, &quot;(3) – Some of the time&quot;, 3, &quot;(2) – Good part of the time&quot;,2, &quot;(1) – Always or most of the time&quot;,1,0) 
+ 
CASE( BRI_HFPI_Q16__c, 
&quot;(NR) No Response(no score)&quot;, 0, &quot;(5)– Rarely or Never&quot;, 5, &quot;(4)– A little of the time&quot;, 4, &quot;(3) – Some of the time&quot;, 3, &quot;(2) – Good part of the time&quot;,2, &quot;(1) – Always or most of the time&quot;,1,0)+
CASE( BRI_HFPI_Q17__c, 
&quot;(NR) No Response(no score)&quot;, 0, &quot;(5)– Rarely or Never&quot;, 5, &quot;(4)– A little of the time&quot;, 4, &quot;(3) – Some of the time&quot;, 3, &quot;(2) – Good part of the time&quot;,2, &quot;(1) – Always or most of the time&quot;,1,0) 
+ 
CASE( BRI_HFPI_Q18__c, 
&quot;(NR) No Response(no score)&quot;, 0, &quot;(5)– Rarely or Never&quot;, 5, &quot;(4)– A little of the time&quot;, 4, &quot;(3) – Some of the time&quot;, 3, &quot;(2) – Good part of the time&quot;,2, &quot;(1) – Always or most of the time&quot;,1,0) 
+ 
CASE( BRI_HFPI_Q19__c, 
&quot;(NR) No Response(no score)&quot;, 0, &quot;(5)– Rarely or Never&quot;, 5, &quot;(4)– A little of the time&quot;, 4, &quot;(3) – Some of the time&quot;, 3, &quot;(2) – Good part of the time&quot;,2, &quot;(1) – Always or most of the time&quot;,1,0) 
+ 
CASE( BRI_HFPI_Q20__c, 
&quot;(1)-Rarely or Never&quot;, 1, &quot;(2)-A little of the time&quot;, 2, &quot;(3)-Some of the time&quot;, 3, &quot;(4)-Good part of the time&quot;, 4, &quot;(5)-Always or most of the time&quot;,5,0) 
+ 
CASE( BRI_HFPI_Q21__c, 
&quot;(1)-Rarely or Never&quot;, 1, &quot;(2)-A little of the time&quot;, 2, &quot;(3)-Some of the time&quot;, 3, &quot;(4)-Good part of the time&quot;, 4, &quot;(5)-Always or most of the time&quot;,5,0)
+
CASE( BRI_HFPI_Q22__c, 
&quot;(1)-Rarely or Never&quot;, 1, &quot;(2)-A little of the time&quot;, 2, &quot;(3)-Some of the time&quot;, 3, &quot;(4)-Good part of the time&quot;, 4, &quot;(5)-Always or most of the time&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depression Subscale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Disciplinary_Practices__c</fullName>
        <label>Disciplinary Practices</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_DoWhatAsked__c</fullName>
        <label>DoWhatAsked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Do_things_Over__c</fullName>
        <label>Do things Over</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_DrugDuringPregnancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DrugDuringPregnancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_DrugUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DrugUse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_EPDS_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPDS Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EPDS Assessments</relationshipLabel>
        <relationshipName>Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Eating_Problem__c</fullName>
        <label>Eating Problem</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Emotional_Abuse_of_Childrens_s__c</fullName>
        <inlineHelpText>Absence/Presence of Emotional Abuse of Childrens&apos;s</inlineHelpText>
        <label>Emotional Abuse of Childrens&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Encourages_Exploration__c</fullName>
        <inlineHelpText>Encourages Exploration number must be between 1-7</inlineHelpText>
        <label>Encourages Exploration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Enjoy_Meal_time__c</fullName>
        <label>Enjoy Meal time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Enjoy_Watching_Listening__c</fullName>
        <label>Enjoy Watching Listening</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Environmental_Risks__c</fullName>
        <label>Environmental Risks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Expectations_of_Children_s__c</fullName>
        <label>Expectations of Children&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Expresses_positivity__c</fullName>
        <inlineHelpText>Expresses positivity number must be between 1-7</inlineHelpText>
        <label>Expresses positivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FAW__c</fullName>
        <label>FAW</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FM__c</fullName>
        <label>Fine Motor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FSW__c</fullName>
        <label>FSW</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Family_Health_Total__c</fullName>
        <formula>CASE(BRI_Overall_Family_Health__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Parent_Caregiver_s_Disability__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Children_s_Disability__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Parent_Caregiver_s_Mental_Health__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Physical_Health__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Access_to_Health_Mental_Health_care__c	 ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)
+
CASE(BRI_Children_s_Mental_Health__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Children_s_Physical_Health__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Health Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Family_History_Deafness__c</fullName>
        <label>Family History Deafness</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Income__c</fullName>
        <label>Family Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Interaction_Total__c</fullName>
        <formula>CASE(BRI_Bonding_with_Children_s__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Expectations_of_Children_s__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(Relationship_Between_Parents_Caregivers__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(Family_Recreation_and_Play_Activities__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Overall_Family_Interactions__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Communication_with_Childrens__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)
+
CASE(BRI_Family_Routines_Rituals__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(Family_Recreation_and_Play_Activities__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Interaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Family_Number__c</fullName>
        <label>Family Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Family_Routines_Rituals__c</fullName>
        <label>Family Routines/Rituals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Safety_Total__c</fullName>
        <formula>CASE(BRI_Overall_Family_Safety__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(Absence_Presence_of_Other_Family_Confli__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Emotional_Abuse_of_Childrens_s__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Sexual_Abuse_of_Children_s__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(Absence_Presence_of_Domestic_Violence_Be__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Neglect_of_Children_s__c ,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)
+
CASE(Absence_Presence_of_Abuse_of_child__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0) 
+ 
CASE(BRI_Access_to_Weapons__c,&quot;N/A&quot;,0,&quot;2&quot;,2,&quot;1&quot;,1,&quot;0&quot;,0,&quot;-1&quot;,-1,&quot;-2&quot;,-2,&quot;-3&quot;,-3,&quot;UK(Unknown)&quot;,0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Safety Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Feet_Flat__c</fullName>
        <label>Flat Feet</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Financial_Management__c</fullName>
        <label>Financial Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Follow_Direction__c</fullName>
        <label>Follow Direction</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Follows_Child_s_Lead__c</fullName>
        <inlineHelpText>Follows Child’s Lead number must be between 1-7</inlineHelpText>
        <label>Follows Child’s Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Food_and_Nutrition__c</fullName>
        <label>Food and Nutrition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_GM__c</fullName>
        <label>Gross Motor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Gentle_holding_Touching__c</fullName>
        <inlineHelpText>Gentle holding/Touching number must be between 1-7</inlineHelpText>
        <label>Gentle holding/Touching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Greet_Say_Hello__c</fullName>
        <label>Greet Say Hello</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFPI_Q10__c</fullName>
        <label>Q10. good at dealing unexpected problems</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NR (no response)(no score)</fullName>
                </value>
                <value>
                    <fullName>(1)-Rarely or Never</fullName>
                </value>
                <value>
                    <fullName>(2)-A little of the time</fullName>
                </value>
                <value>
                    <fullName>(3)-Some of the time</fullName>
                </value>
                <value>
                    <fullName>(4)-Good part of the time</fullName>
                </value>
                <value>
                    <fullName>(5)-Always or most of the time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFPI_Q11__c</fullName>
        <label>Q11.Remain calm when new problems comeup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NR (no response)(no score)</fullName>
                </value>
                <value>
                    <fullName>(1)-Rarely or Never</fullName>
                </value>
                <value>
                    <fullName>(2)-A little of the time</fullName>
                </value>
                <value>
                    <fullName>(3)-Some of the time</fullName>
                </value>
                <value>
                    <fullName>(4)-Good part of the time</fullName>
                </value>
                <value>
                    <fullName>(5)-Always or most of the time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HFPI_Q12__c</fullName>
        <inlineHelpText>Red Flag Question</inlineHelpText>
        <label>Q12. I feel sad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NR (no response)(no score)</fullName>
                </value>
                <value>
                    <fullName>(1)-Rarely or Never</fullName>
                </value>
                <value>
                    <fullName>(2)-A little of the time</fullName>
                </value>
                <value>
                    <fullName>(3)-Some of the time</fullName>
                </value>
                <value>
                    <fullName>(4)-Good part of the time</fullName>
                </value>
                <value>
                    <fullName>(5)-Always or most of the time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Habitability_of_Housing__c</fullName>
        <label>Habitability of Housing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Happy__c</fullName>
        <label>Happy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Hearing__c</fullName>
        <label>Hearing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Household_ASQ_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household ASQ-3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASQ-3 Assessments</relationshipLabel>
        <relationshipName>Assessments3</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>